applications/websites/vote-system.wesl.io/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-system-wesl-io-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote-system-wesl-io
  template:
    metadata:
      labels:
        app: vote-system-wesl-io
    spec:
      imagePullSecrets:
        - name: ghcr-access-token
      containers:
        - name: vote-system-wesl-io-site
          image: ghcr.io/wesleyklop/vote-system:edge
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 150m
              memory: 384Mi
          ports:
            - containerPort: 80
        - name: vote-system-wesl-io-websockets
          image: ghcr.io/wesleyklop/vote-system:edge
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 150m
              memory: 256Mi
          command: ["php", "artisan", "websockets:serve"]
          ports:
            - containerPort: 6001
