applications/websites/vote-system.wesl.io/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote-system-wesl-io-svc
spec:
  selector:
    app: vote-system-wesl-io
  ports:
    - protocol: TCP
      name: site
      port: 80
      targetPort: 80
    - protocol: TCP
      name: websockets
      port: 6001
      targetPort: 6001
